<resources>
    <string name="app_name">Литера</string>
    <string name="main_menu_title_menu">Категории</string>
    <string name="main_menu_title_news">Акции</string>
    <string name="main_menu_title_photo_reports">История заказов</string>
    <string name="main_menu_title_delivery">Адреса \n магазинов</string>
    <string name="brodsky">Не выходи из комнаты</string>
    <string name="brodsky_text">Скидка 10% на подборку книг для поклонников Бродского</string>
    <string name="bookFilms">Читаем фильмы, смотрим книги</string>
    <string name="bookFilms_text">Скидка на покупку экранизированных книг 10%</string>
    <string name="starWars">В одной далёкой-далёкой…</string>
    <string name="starWars_text">Подборка книг для любителей Звездных войн. Скидка 20 % при покупке цикла книг</string>
    <string name="loveArt">О любви к искусству</string>
    <string name="loveArt_text">Скидка 10% на книги о великих художниках и архитекторах</string>
    <string name="news">Акции</string>
    <string name="photo">На данный момент фотографии отсутствуют</string>
    <string name="delivery">Функция доставки на данный момент недоступна</string>
    <string name="address_one">г. Пенза, ул. Ульяновская, д. 68, ТЦ "Трамплин", 4 этаж \n Время работы: 9:00 - 22:00</string>
    <string name="address_two">г. Пенза, ул. Ленина, д. 7, 1 этаж \n Время работы: 10:00 - 22:00</string>
    <string name="address_three">г. Пенза, ул. Кирова, д. 15, ТЦ "Гранат", 5 этаж \n Время работы: 9:00 - 22:00</string>
</resources>
