<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/AppToolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginTop="12dp"
                android:id="@+id/news_one"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:id="@+id/image_one"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/book_films">

                </ImageView>

                <TextView
                    android:id="@+id/textOne_Caption"
                    style="@style/textNewsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image_one"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/bookFilms" />

                <TextView
                    android:id="@+id/textOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textOne_Caption"
                    android:layout_toRightOf="@id/image_one"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="4dp"
                    android:text="@string/bookFilms_text" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="12dp"
                android:id="@+id/news_two"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:id="@+id/image_two"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/star_wars">

                </ImageView>

                <TextView
                    android:id="@+id/textTwo_Caption"
                    style="@style/textNewsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image_two"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/starWars" />

                <TextView
                    android:id="@+id/textTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textTwo_Caption"
                    android:layout_toRightOf="@id/image_two"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="4dp"
                    android:text="@string/starWars_text" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="12dp"
                android:id="@+id/news_three"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:id="@+id/image_three"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/brodsky">

                </ImageView>

                <TextView
                    android:id="@+id/textThree_Caption"
                    style="@style/textNewsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image_three"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/brodsky" />

                <TextView
                    android:id="@+id/textThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textThree_Caption"
                    android:layout_toRightOf="@id/image_three"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="4dp"
                    android:text="@string/brodsky_text" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="12dp"
                android:id="@+id/news_four"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:id="@+id/image_four"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/love_art">

                </ImageView>

                <TextView
                    android:id="@+id/textFour_Caption"
                    style="@style/textNewsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image_four"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/loveArt" />

                <TextView
                    android:id="@+id/textFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textFour_Caption"
                    android:layout_toRightOf="@id/image_four"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="4dp"
                    android:text="@string/loveArt_text" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>