<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/AppToolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/category">

                </ImageView>

                <TextView
                    style="@style/textMenuStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/main_menu_title_menu" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/news"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/action">

                </ImageView>

                <TextView
                    style="@style/textMenuStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/main_menu_title_news" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/history" />

                <TextView
                    style="@style/textMenuStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/main_menu_title_photo_reports" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/delivery"
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/address">

                </ImageView>

                <TextView
                    style="@style/textMenuStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/main_menu_title_delivery" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
