<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/AppToolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="12dp"
            android:id="@+id/address_one"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/image_one"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleType="centerCrop"
                android:src="@drawable/address_one">

            </ImageView>

            <TextView
                android:id="@+id/text_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/image_one"
                android:paddingLeft="20sp"
                android:paddingRight="16sp"
                android:paddingTop="4dp"
                android:text="@string/address_one" />

        </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="12dp"
                android:id="@+id/address_two"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/image_two"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/address_two">

                </ImageView>

                <TextView
                    android:id="@+id/text_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image_two"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="4dp"
                    android:text="@string/address_two" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="12dp"
                android:id="@+id/address_three"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/image_three"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/address_three">

                </ImageView>

                <TextView
                    android:id="@+id/text_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image_three"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="4dp"
                    android:text="@string/address_three" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>